# ray_v2

./: .gitignore  Cargo.toml
.VSCodeCounter/2023-11-14_08-52-58/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
file/: box.json  box.toml  light_bank.toml  sence.json  sence.toml  setting.toml  setting.yaml  skybox.toml  sphere.json
object/: a.glb  b.gltf  box.glb  box.mtl  boxblend.blend  boxblend.blend1  boxblend.glb  boxblend.gltf  cornbox.glb  cornbox.gltf  cube_shpere.glb  plan.glb  shpere.glb  shperes.glb  untitled.blend  yuans.glb
sence/: sence.json
src/: main.rs
src/pbrt_core/: filter.rs  mod.rs
src/pbrt_core/bssdf/: henyey_phase.rs  homogeneous_medium.rs  mod.rs
src/pbrt_core/bssrdf/: mod.rs
src/pbrt_core/bxdf/: diffuse.rs  disney.rs  frensnel.rs  fresnel.rs  medium.rs  microfacet_distribution.rs  mod.rs  pbr.rs  reflection.rs  specular.rs
src/pbrt_core/camera/: mod.rs
src/pbrt_core/integrator/: direct.rs  mod.rs  path.rs
src/pbrt_core/light/: Infinite.rs  area.rs  inf.rs  mod.rs  point.rs
src/pbrt_core/load/: gltfload.rs  mod.rs  myload.rs  objload.rs  tomlload.rs
src/pbrt_core/material/: disney.rs  matte.rs  metal.rs  mirror.rs  mod.rs  pbr.rs  plastic.rs
src/pbrt_core/primitive/: bvh.rs  mesh.rs  mod.rs
src/pbrt_core/primitives/: bvh.rs  mod.rs
src/pbrt_core/sampler/: distribution_1d.rs  mod.rs
src/pbrt_core/texture/: bilinear.rs  constant.rs  image.rs  mipmap.rs  mod.rs  scale.rs
src/pbrt_core/tool/: bound.rs  build.rs  color.rs  content.rs  error.rs  (+11 more)
src/test/: mod.rs
(+18 files in other folders)
