[package]
name = "ray_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
glam={version="0.23.0", features = ["serde"]}
rand="*"
gltf={version="1.3.0", features  =["KHR_lights_punctual"]}
indicatif="*"
image="*"
serde_json = "1.0"
serde = { version = "1.0"}
rtbvh="0.6.2"
log="*"
log4rs = "1.2.0"
toml="*"